  14. Wands and Staffs now have their max charges settable from common skill recipes.
  15. New LIST COMMANDJOURNALS
  16. Shipwright has all new recipes with new wonders to behold.
  17. REPORT command can now report expertises and languages also.
  18. New Spells: Conjure Ammunition, Harden Bullets, Light Blindness
  19. ZapperMask now supports +-ACCOUNTS
  20. New Prayer: Mass Forgive
  21. New common skills: Legendary Weaponsmithing
  22. Prop_LocationBound is more flexible with ABSOLUTE, PLAYEROK, and TIMEOUT arguments
  23. Scriptable commands QUESTMOB, QUESTOBJ, and QUESTSCRIPTED can now scan ALL quests
  24. ShapeShift forms 6-11 added, and shapeshift now governed by skills/shapeshift.txt
  25. New Race flag: infatigueable -- prevents fatigue, given to undead and golems.
  26. New standard Race: Flesh Golem
  27. Light Sensitivity (Drow racial trait) is now less onerous.
  28. Siplet has better drag-move ability, resize ability from bottom bar, and font 
      resize with ctrl-uparrow and ctrl-downarrow
  29. Siplet will now auto-populate the text area when editing room descriptions.
  30. New item type: GenBagOfEndlessness -- remember to set the capacity to 0
  31. Experience can now be gained from role playing, see RPAWARD in the INI file
  32. Experience can now be deferred for a later command, see EXPDEFER in the INI file
  33. LISTFILE now has "condition" msgs for armor and weapons, and entries are overridable.
  34. PROWESSOPTIOS and the LISTFILE can now be used to show skill proficiency as words.
# Build 5.9.6 Release 12/31/2017
   *. Sections in the default coffeemud.ini file were moved around.  Don't be alarmed. :)
   1. Hunger and Thirst system can now be tweeked.  See coffeemud.ini file
   2. Entering SHUTDOWN RESTART HARD will now attempt to run a restart.sh/restart.bat.
   3. GMODIFY now supports changing the CLASS of objects, including rooms.
   4. RESET RELEVEL tool added to refactor an areas level range.