@@ -671,9 +671,9 @@ HUNGER=500,100,100
 # Default is 1000,100,100
 THIRST=1000,100,100
 
-# EXPDEFER determines when a player receives earned experience right away,
+# EXPDEFER determines whether a player receives earned experience right away,
 # or whether it is deferred until later. The normal state is that experience
-# is awarded  the moment it is earned, where it is earned.  However, this
+# is awarded the moment it is earned, where it is earned.  However, this
 # field lets you defer the awarding of earned experience until an event or 
 # action is taken.
 # If the value is empty, the normal state holds.
@@ -683,7 +683,7 @@ THIRST=1000,100,100
 # by a space and COMMAND(ARGUMENT STRING) , followed by a space and a 
 # zappermask. This will cause xp that is earned to be deferred until 
 # entering the given command and given optional argument.  If the command 
-# name begins with $, then the command is NOT executed after the xp 
+# name begins with $ then the base command is still executed after the xp 
 # is dispursed.  A wilcard * may be used in the argument.
 # The optional Zappermask then describes who must be in the same room; 
 # see AHELP ZAPPERMASK for more info.  Unlike most static zappermasks,
@@ -712,6 +712,14 @@ EXPDEFER=
 # RPAWARDS=25% 8, INTRODUCE-PC 20, INTRODUCE-NPC 5, SAY-PC 5, SAY-NPC 1, SOCIAL-PC 10, SOCIAL-NPC 1, SOCIAL-OTH 1, GOAFK -25 
 # Default is empty (role playing xp is disabled)
 RPAWARDS=
+
+# LOGOUTMASK is an optional zappermask that the player must match in order 
+# to logout of the game, quit, or switch to another account character.  
+# Dropping the connection in the wrong state will keep the vulnerable player 
+# in game.  See AHELP ZAPPERMASK for more information.  
+# Example:
+# LOGOUTMASK=-LOCATION +OWNED +CLANOWNED +PRIV +ROOMSTR(Inn) +ROOMSTR(Hotel)
+LOGOUTMASK=
 
 ######################################################################
 # Ability/Skill related configuration variables
