@@ -17,7 +17,7 @@
   16. Shipwright has all new recipes with new wonders to behold.
   17. REPORT command can now report expertises and languages also.
   18. New Spells: Conjure Ammunition, Harden Bullets, Light Blindness
-  19. ZapperMask now supports +-ACCOUNTS
+  19. ZapperMask now supports +-ACCOUNTS and +-LOCATION
   20. New Prayer: Mass Forgive
   21. New common skills: Legendary Weaponsmithing
   22. Prop_LocationBound is more flexible with ABSOLUTE, PLAYEROK, and TIMEOUT arguments
@@ -34,6 +34,7 @@
   32. Experience can now be deferred for a later command, see EXPDEFER in the INI file
   33. LISTFILE now has "condition" msgs for armor and weapons, and entries are overridable.
   34. PROWESSOPTIOS and the LISTFILE can now be used to show skill proficiency as words.
+  35. New LOGOUTMASK to limit when a player can logout of the game.
 # Build 5.9.6 Release 12/31/2017
    *. Sections in the default coffeemud.ini file were moved around.  Don't be alarmed. :)
    1. Hunger and Thirst system can now be tweeked.  See coffeemud.ini file
